# HFT-OpenEnv

./: .gitignore  README.md  __init__.py  baseline_scores.json  client.py  error_log.txt  inference.py  models.py  openenv.yaml  presumbission-validation.sh  pyproject.toml  transcript.txt
server/: Dockerfile  __init__.py  app.py  hft_environment.py  requirements.txt
server/config/: basic_execution.yaml  conflicting_signal.yaml  false_signal.yaml  flash_crash.yaml
server/core/: OrderBook.py  engine.py
server/core/hft_traders/: AdversarialSelectionTrader.py  AvellanedaStoikovModel.py  FundamentalTrader.py  NoiseTrader.py  Trader.py
